Fixed recent videos and facebook share links broken, related videos slider alignment - Upgrade (2.7) issues
git-svn-id: https://plugins.svn.wordpress.org/contus-video-gallery/trunk@977676 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -257,10 +257,20 @@ font-size: 12px;
 width: 99px;
 }
 
-.videoplayer {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px; height: 0; overflow: hidden;
+.videoplayer{
+	padding-bottom:56.25%;
+}
+.videoplayer.shrotcode{
+	padding-bottom:46.25%;
+}
+.mediaspace .videoplayer{
+	padding-bottom:34.25%;
+}
+.mediaspace .videoplayer, .videoplayer.shrotcode, .videoplayer{
+	position:relative;
+	padding-top:30px;
+	height:0;
+	overflow:hidden
 }
  
 .videoplayer iframe,
